# 
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, you can obtain one at https://mozilla.org/MPL/2.0/.
#

Hedgehog 2.4.0rc1 - 2016-11-02
----------------------------
* Add new graph for Server IP address vs transport (UDP/TCP)
* Changed license to MPL

Hedgehog 2.3.0 - 2016-09-12
----------------------------
* Add ability to filter the server addresses displayed in the 'By server IP
  address' plot. Controlled by the database_update_service_addr script.
* Add new 'By region' graph which is now the default. This graph always groups
  the results by Region. The 'By node' graph now always displays a line per node
  regardless of the node selection (previously it grouped by Region when all
  nodes were selected).
* Default plot is now a configuration option. To specify a plot use the 'Hedgehog
  internal plot name' as listed in the User Guide.
* Update RSSAC report header format to match RSSC002v3 report.
* Enhancements to datafiles_create_summary script.


Hedgehog 2.2.0 - 2016-08-31
-----------------------------
* Added new dataset and plot dnskey_vs_asn


Hedgehog 2.1.1 - 2016-08-16
-----------------------------
* Fix issue with database_manage_partitions script where generating tables for
  -09 and -10 months didn't work
* Add additional check on input parameters
* Modify instructions due to issue with latest build of rcpp
* Migrate to install from packages only from 2.1.1


Hedgehog 2.1.0 - 2016-06-20
------------------------------
* Production release of 'Daurian'


Hedgehog 2.1.0rc3 - 2016-06-01
------------------------------
* Add option to specify number of processes for refile_and_grok to use
* Fix connection issue in update_tlds_from_zone script
* Make hedgehogctl produce correct tools list for split installs
* Minor documentation fixes


Hedgehog 2.1.0rc2 - 2016-05-19
------------------------------
* Add default server for drop down as a config option