@@ -213,6 +213,7 @@ while read line || [[ -n "$line" ]]; do
 			if [ -n "$NODE_ID" ] ; then
 				psql $CONN_STRING -c "BEGIN; DELETE FROM dsc.data where node_id = ${NODE_ID}; DELETE FROM node where id = ${NODE_ID}; COMMIT;"
 				((NODES_REMOVED++))
+				echo "The data directory for Server:${aNODES["server_name"]} Node: ${aNODES["node_name"]} can now be manually removed."
 				continue
 			else
 				echo "***ERROR***:  Line $i, The node called ${aNODES["node_name"]} could not be found"
@@ -243,9 +244,12 @@ while read line || [[ -n "$line" ]]; do
 		echo "UPDATED NODE: ${aNODES["server_name"]}, ${aNODES["node_name"]}"
 		((NODES_UPDATED++))
 	fi
-	mkdir -p $DATA_DIR/${aNODES["server_name"]}/${aNODES["node_name"]}/incoming
-	chmod 775 $DATA_DIR/${aNODES["server_name"]}/${aNODES["node_name"]}/incoming
-   
+	if [ $RENAME -eq 1 ] && [ -n "${aNODES["old_name"]}" ] ; then
+		mv $DATA_DIR/${aNODES["server_name"]}/${aNODES["old_name"]} $DATA_DIR/${aNODES["server_name"]}/${aNODES["node_name"]}
+	else
+		mkdir -p $DATA_DIR/${aNODES["server_name"]}/${aNODES["node_name"]}/incoming
+		chmod 775 $DATA_DIR/${aNODES["server_name"]}/${aNODES["node_name"]}/incoming
+	fi
 	junk=""
 done < ${NODES_FILE}
 
